pretty much done with part 1
