# middleware/validate.js
@@ -1,0 +1,51 @@
+const validator = require('../helpers/validate');
+
+const saveContact = (req, res, next) => {
+    const validationRule = {
+        firstName: 'required|string',
+        lastName: 'required|string',
+        email: 'required|email',
+        favoriteColor: 'required|string',
+        birthday: 'string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
+const saveNumber = (req, res, next) => {
+    const validationRule = {
+        name: 'required|string',
+        one: 'required|string',
+        two: 'required|string',
+        three: 'required|string',
+        four: 'required|string',
+        five: 'required|string',
+        six: 'required|string',
+        seven: 'required|string',
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
+module.exports = {
+    saveContact,
+    saveNumber
+};
