# routes/numbers.js
@@ -3,11 +3,11 @@ const router = express.Router();
 
 const numbersController = require('../controllers/numbers');
 
-router.get('/', numbersController.getAll);
-router.get('/:id', numbersController.getSingle);
+router.get('/', numbersController.getAllNumbers);
+router.get('/:id', numbersController.getSingleNumber);
 
-router.post('/', numbersController.createContact); //create
-router.put('/:id', numbersController.updateContact); //update
-router.delete('/:id', numbersController.deleteContact); //delete
+router.post('/', numbersController.createNumber); //create
+router.put('/:id', numbersController.updateNumber); //update
+router.delete('/:id', numbersController.deleteNumber); //delete
 
 module.exports = router;
